trying to avoid landscape rotation on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -662,21 +662,22 @@ section.home {
       & .img-wrapper {
         img {
           &:nth-child(1) {
-            top: 366px;
-            right: 204px;
-            z-index: 100;
-            height: 160px;
-            width: 140px;
-            box-shadow: 0px 10px 40px #00000017;
-            transform: rotate(-5deg);
-            -o-object-position: bottom;
-            object-position: bottom;
-            z-index: 10000;
+            display:none;
+            // top: 366px;
+            // right: 204px;
+            // z-index: 100;
+            // height: 160px;
+            // width: 140px;
+            // box-shadow: 0px 10px 40px #00000017;
+            // transform: rotate(-5deg);
+            // -o-object-position: bottom;
+            // object-position: bottom;
+            // z-index: 10000;
           }
 
           &:nth-child(2) {
             right: 283px;
-            // top: -58px;
+            top: 122px;
             width: 260px;
             height: 430px;
             z-index: 1000;
@@ -686,7 +687,7 @@ section.home {
           &:nth-child(3) {
             top: -36px;
             left: 407px;
-            height: 520px;
+            height: 564px;
             width: 355px;
           }
         }
